# toyos

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  OS_FROM_SCRATCH_GUIDE.md  PLAN.md  README.md  build.rs  system.toml  virtio.md  x86_64-unknown-toyos.json  x86_64_TLS_and_ELF_Loading_Guide.md
bootloader/: Cargo.toml  README.md  build.rs
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
kernel/: Cargo.toml  README.md  TECHNICAL_DEBT.md
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  addr.rs  allocator.rs  audio.rs  bcachefs_adapter.rs  block.rs  clock.rs  console.rs  device.rs  disk.rs  elf.rs  fd.rs  file_backing.rs  file_cache.rs  font.rs  fs.rs  gdt.rs  gpu.rs  id_map.rs  interrupts.rs  io.rs  io_uring.rs  keyboard.rs  lib.rs  listener.rs  loader.rs  log.rs  main.rs  message.rs  mouse.rs  net.rs  nvme.rs  page_cache.rs  paging.rs  pci.rs  pipe.rs  pmm.rs  process.rs  ramdisk.rs  rtc.rs  (+14 more)
kernel/src/arch/: apic.rs  cpu.rs  debug.rs  gdt.rs  idt.rs  mod.rs  paging.rs  percpu.rs  smp.rs  syscall.rs
kernel/src/drivers/: acpi.rs  framebuffer.rs  gop.rs  mmio.rs  mod.rs  nvme.rs  pci.rs  serial.rs  virtio.rs  virtio_gpu.rs  virtio_net.rs  virtio_sound.rs  xhci.rs
kernel/src/mm/: alloc.rs  mmio.rs  mod.rs  paging.rs  pmm.rs  region.rs
tests/: Cargo.toml  build.rs  host_c.rs  toyos.rs  toyos_c.rs  toyos_rust.rs
tests/.cargo/: config.toml
tests/common/: compile.rs  mod.rs  qemu.rs
tests/src/: compile.rs  lib.rs  qemu.rs
tests/testcases/: system.toml
tests/testcases/pp_tcc/: 11.expect  24.c
tests/testcases/tinycc/: 129_scopes.c  138_offsetof.c  138_offsetof.expect  140_switch_hex.expect  141_tok_str.c  141_tok_str.expect  142_pp_sizeof_ptr.c  143_uint64_split.expect  144_sizeof_init.c  149_bitfield_write.c  150_union_short_store.expect  152_float_const_init.c  153_sizeof_const_init.c  155_addr_array_elem_init.c  156_sizeof_array_count.c  157_sizeof_member.c  157_sizeof_member.expect  158_vla.expect  160_global_variadic.expect  18_include.c  200_variadic_float.c  90+_static_vs_global.c  90_static_vs_global.c  90_static_vs_global.expect  90_struct_init.expect  debug_float.c  debug_float.expect
tests/tests/: host_c.rs  toyos_c.rs  toyos_rust.rs
tests/toyos-rust-tests/: Cargo.toml
tests/toyos-rust-tests/tls-cranelift/: Cargo.toml
tests/toyos-rust-tests/tls-dlopen-lib/: Cargo.toml
tests/toyos-rust-tests/tls-lib/: Cargo.toml
tests/toyos-rust-tests/tls-multi-crate/: Cargo.toml
toyos-cc/: Cargo.toml  README.md
toyos-cc/include/: assert.h  compat.h  stdalign.h
toyos-cc/src/: lib.rs  main.rs  types.rs
toyos-cc/src/codegen/: addr.rs  bitfield.rs  expr_type.rs  mod.rs  ops.rs  resolve.rs  stmt.rs
toyos-cc/src/parse/: expr.rs  mod.rs  stmt.rs
toyos-cc/src/preprocess/: mod.rs
userland/: Cargo.toml  README.md  rust-toolchain.toml
userland/.cargo/: config.toml
userland/bootstrap-cc/: .gitignore  Cargo.toml  README.md
userland/bootstrap-cc/src/: main.rs
userland/cargo/: Cargo.toml
userland/cat/src/: main.rs
userland/compositor/: Cargo.toml  README.md  build.rs
userland/compositor/src/: font.rs  framebuffer.rs  main.rs
userland/cpal/: Cargo.toml
userland/ctrlc/: README.md
userland/doom/: Cargo.toml  build.rs
userland/doom/include/: SDL_mixer.h  doomtype.h
userland/doom/src/: input.rs  main.rs  sound.rs
userland/edit/: Cargo.toml
userland/edit/src/: lib.rs  sys.rs
userland/editor/: Cargo.toml
userland/editor/src/: main.rs
userland/errno/src/: hermit.rs  lib.rs  toyos.rs  unix.rs
userland/filepicker/: Cargo.toml
userland/filepicker-api/: Cargo.toml
userland/filepicker-api/src/: lib.rs
userland/filepicker/src/: main.rs
userland/files/: Cargo.toml  README.md
userland/files/src/: framebuffer.rs  main.rs
userland/filetime/: Cargo.toml
userland/font/: Cargo.toml  README.md
userland/font/src/: lib.rs
userland/getrandom-0.2/: Cargo.toml
userland/getrandom-0.2/src/: lib.rs  toyos.rs
userland/getrandom-0.4/: Cargo.toml
userland/getrandom-0.4/src/: backends.rs
userland/getrandom3/: Cargo.toml
userland/getrandom3/src/: backends.rs
userland/gitoxide/: .gitignore  test_symlink2
userland/gitoxide/gix-index/: Cargo.toml
userland/grep/: Cargo.toml
userland/grep/src/: main.rs
userland/hello/: Cargo.toml
userland/hello/src/: main.rs
userland/input-test/: Cargo.toml  README.md
userland/input-test/src/: main.rs
userland/is_executable/src/: lib.rs
userland/jobserver/: Cargo.toml
userland/jobserver-old/src/: lib.rs
userland/jobserver/src/: error.rs  toyos.rs
userland/keyboard/: Cargo.toml
userland/keyboard/src/: main.rs
userland/libc/: Cargo.toml  README.md
userland/libc/include/: assert.h  dlfcn.h  errno.h  fcntl.h  glob.h  inttypes.h  limits.h  math.h  netdb.h  poll.h  pthread.h  semaphore.h  setjmp.h  signal.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h  wchar.h
userland/libc/src/: ctype.rs  lib.rs  math.rs  memory.rs  misc.rs  posix_io.rs  printf.rs  pthread.rs  time.rs  (+3 more)
userland/libloading/: .gitignore
userland/ls/: Cargo.toml
userland/memmap2/: README.md
userland/mio/: Cargo.toml
userland/monitor/: Cargo.toml  README.md
userland/netd/: Cargo.toml  README.md
userland/paint/: Cargo.toml
userland/proctest/: Cargo.toml  README.md
userland/pwd/: Cargo.toml
userland/rm/: Cargo.toml
userland/russh/: Cargo.toml
userland/shell/: Cargo.toml  README.md
userland/shutdown/: Cargo.toml
userland/snake/: Cargo.toml  README.md  build.rs
userland/socket2/: .gitignore  Cargo.toml
userland/softbuffer/: Cargo.toml
userland/soundd/: Cargo.toml
userland/sprite/: Cargo.toml  README.md
userland/sshd/: Cargo.toml
userland/stacker/: .gitignore  Cargo.toml  README.md
userland/tar/: .gitignore
userland/terminal/: Cargo.toml  README.md  build.rs
userland/test-runner/: Cargo.toml
userland/tokio/: Cargo.toml
userland/toybox/: Cargo.toml  README.md
userland/toyos-cc/: Cargo.toml
userland/toyos-ld/: Cargo.toml  README.md
userland/toyos-net/: Cargo.toml
userland/window/: Cargo.toml  README.md
userland/winit/: Cargo.toml
(+376 files in other folders)
