[package]
name = "toyos"
version = "0.1.0"
edition = "2021"

[dependencies]
fatfs = "0.3.6"
fontdue = "0.9"
gpt = "3.1.0"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcachefs = { path = "bcachefs" }
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[dev-dependencies]
toyos-cc = { path = "toyos-cc" }
toyos-ld = { path = "toyos-ld" }

[profile.release]
opt-level = 2

[profile.dev.package.toyos-cc]
opt-level = 3

[profile.dev.package.toyos-ld]
opt-level = 3

[[test]]
name = "toyos"
harness = false

[patch.crates-io]
target-lexicon = { git = "https://github.com/Japabu/target-lexicon.git" }
