[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.26.0", default-features = false }
uefi-services = { version = "0.23.0", features = ["panic_handler", "logger"] }
elf = { version = "0.7.4", default-features = false }
