[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug-wait = []

[dependencies]
bcachefs = { path = "../bcachefs", default-features = false }
toyos-abi = { path = "../toyos-abi" }
rustc-demangle = "0.1"
elf = { version = "0.8", default-features = false }
hashbrown = { version = "0.16", default-features = false, features = ["default-hasher"] }
dlmalloc = { path = "../userland/dlmalloc-rs", default-features = false }
