[package]
name = "toyos-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
toyos-cc = { path = "../toyos-cc" }
toyos-ld = { path = "../toyos-ld" }
bcachefs = { path = "../bcachefs" }
fatfs = "0.3.6"
gpt = "3.1.0"
wait-timeout = "0.2.1"

[profile.dev.package.toyos-cc]
opt-level = 3

[profile.dev.package.toyos-ld]
opt-level = 3

[patch.crates-io]
target-lexicon = { path = "../userland/target-lexicon" }
stacker = { path = "../userland/stacker" }
psm = { path = "../userland/stacker/psm" }
