[package]
name = "toyos-cc"
version = "0.1.0"
edition = "2021"

[dependencies]
cranelift-codegen = { version = "0.128", default-features = false, features = ["std", "x86", "arm64"] }
cranelift-frontend = "0.128"
cranelift-module = "0.128"
cranelift-object = "0.128"
target-lexicon = { git = "https://github.com/Japabu/target-lexicon.git" }
toyos-ld = { path = "../toyos-ld" }

[patch.crates-io]
target-lexicon = { git = "https://github.com/Japabu/target-lexicon.git" }
