[workspace]
resolver = "2"
members = [
    "compositor",
    "doom",
    "editor",
    "filepicker",
    "filepicker-api",
    "files",
    "font",
    "input-test",
    "netd",
    "paint",
    "proctest",
    "shell",
    "snake",
    "soundd",
    "sprite",
    "sshd",
    "terminal",
    "test-runner",
    "toybox",
    "window",
]
exclude = [
    # no_std C runtime — uses panic=abort (own Cargo.toml profile)
    "libc",
    # Ecosystem forks — own workspaces or standalone
    "cargo",
    "cpal",
    "ctrlc",
    "errno",
    "filetime",
    "gitoxide",
    "is_executable",
    "jobserver",
    "libloading",
    "memmap2",
    "mio",
    "russh",
    "rust-url",
    "socket2",
    "stacker",
    "tar",
    "target-lexicon",
    "tokio",
    "raw-window-handle",
    "softbuffer",
    "winit",
    "rustix",
    "getrandom-0.2",
    "getrandom-0.3",
    "getrandom-0.4",
    # Host-only tool with its own patches
    "bootstrap-cc",
]

[patch.crates-io]
# getrandom forks (v0.2 used by doom/snake/sshd transitive deps, v0.3 by sshd transitive deps)
getrandom = { path = "getrandom-0.2", package = "getrandom" }
getrandom_03 = { path = "getrandom-0.3", package = "getrandom" }
getrandom_04 = { path = "getrandom-0.4", package = "getrandom" }
# Ecosystem forks for ToyOS support
mio = { path = "mio" }
tokio = { path = "tokio/tokio" }
russh = { path = "russh/russh" }
russh-cryptovec = { path = "russh/cryptovec" }
socket2 = { path = "socket2" }
target-lexicon = { path = "target-lexicon" }
raw-window-handle = { path = "raw-window-handle" }

[profile.dev.package.doom]
opt-level = 2

[profile.dev.package.compositor]
opt-level = 2
