[package]
name = "doom"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
window = { path = "../window" }
toyos-libc = { path = "../libc", features = ["std-runtime"] }

[patch.crates-io]
getrandom = { git = "https://github.com/Japabu/getrandom", branch = "toyos-v0.2", package = "getrandom" }

[profile.dev]
opt-level = 2

[build-dependencies]
cc = "1.1"
ureq = { version = "3", default-features = false, features = ["rustls-no-provider", "rustls-webpki-roots"] }
rustls-rustcrypto = "0.0.2-alpha"
webpki-roots = "1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"
