[package]
name = "doom"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
cpal = { path = "../cpal" }
winit = { path = "../winit/winit", default-features = false }
softbuffer = { path = "../softbuffer", default-features = false }
rustysynth = "1.3"

[build-dependencies]
cc = "1.1"
ureq = { version = "3", default-features = false, features = ["rustls-no-provider", "rustls-webpki-roots"] }
rustls-rustcrypto = "0.0.2-alpha"
webpki-roots = "1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
tar = "0.4"
