[package]
name = "filetime"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
version = "0.2.27"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["timestamp", "mtime"]
repository = "https://github.com/alexcrichton/filetime"
homepage = "https://github.com/alexcrichton/filetime"
documentation = "https://docs.rs/filetime"
description = """
Platform-agnostic accessors of timestamps in File metadata
"""
edition = "2018"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(emulate_second_only_system)'] }

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.27"

[target.'cfg(target_os = "redox")'.dependencies]
libredox = "0.1.0"

[dev-dependencies]
tempfile = "3"
