[package]
name = "toyos-libc"
version = "0.1.0"
edition = "2021"

[features]
# Enable when linking with Rust std (skips panic_handler and global_allocator)
std-runtime = []

[dependencies]
toyos-abi = { path = "../../toyos-abi" }
toyos-net = { path = "../../toyos-net" }
dlmalloc = "0.2.7"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
