[package]
name = "netd"
edition = "2024"

[dependencies]
toyos-abi = { path = "../../toyos-abi" }
toyos = { path = "../../toyos" }

[dependencies.smoltcp]
version = "0.12"
default-features = false
features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "socket-dns",
    "alloc",
]
