[package]
name = "toyos-ld"
version = "0.1.0"
edition = "2021"

[dependencies]
object = { version = "0.38", default-features = false, features = ["read", "elf", "coff", "pe", "std"] }
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
object = { version = "0.38", default-features = false, features = ["read", "write", "elf", "coff", "pe", "std"] }
